# issueflow

./: .dockerignore  .env  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_zh.md  issueflow.db  openapi.yaml
.agent/skills/ui-ux-pro-max-0.1.0/: skill-card.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
crates/agui-axum/: Cargo.toml
crates/agui-axum/src/: sse.rs
crates/agui-protocol/: Cargo.toml
crates/agui-protocol/src/: events.rs
crates/agui-runtime/: Cargo.toml
crates/agui-runtime/src/: engine.rs  lib.rs  openai.rs  provider.rs
docs/: CONFIG.md  CONFIG_zh.md  DESIGN.md  DESIGN_PPT.md  MVP.md  PRINCIPLE.md  PROTOTYPE.md  RESEARCH.md  configuration.md  local-development.md  note.md
docs/resources/: Loop-Engineering-IEEE.md  Loop-Engineering-IEEE_zh_CN.md  SUMMARY.md  loopengineering-site-summary.md
docs/superpowers/plans/: 2026-05-17-agents-md-implementation.md  2026-05-17-openapi-implementation.md  2026-05-17-rust-gateway-foundation-implementation.md  2026-06-13-frontend-stack-implementation.md  2026-06-14-configuration-and-oidc-implementation.md  2026-06-25-gitlab-issue-creation-implementation.md  2026-06-25-readme-positioning-implementation.md  2026-06-27-agent-session-agui-a2ui-implementation.md  2026-06-27-workbench-management-implementation.md  2026-06-27-workbench-sidebar-and-naming.md  2026-06-28-agent-prompt-file-and-openai-sdk.md  2026-06-28-agui-workspace-extraction.md  2026-06-28-gitlab-rest-client-auth-migration.md  2026-06-29-engineering-memory-hub-implementation.md  2026-06-30-work-item-state-machine.md  2026-07-01-workbench-ui-mock-prototype.md  2026-07-02-frontend-i18n-foundation.md  2026-07-09-role-based-homepage.md
docs/superpowers/specs/: 2026-05-14-gitlab-api-reference.md  2026-05-14-gitlab-ci-example.md  2026-05-14-gitlab-dev-robot-design.md  2026-05-17-agents-md-design.md  2026-05-17-openapi-design.md  2026-05-24-issue-workflow-design.md  2026-06-13-frontend-stack-design.md  2026-06-14-configuration-and-oidc-design.md  2026-06-25-gitlab-issue-creation-design.md  2026-06-25-readme-positioning-design.md  2026-06-27-agent-session-agui-a2ui-design.md  2026-06-27-agent-session-data-model.md  2026-06-27-error-logging-design.md  2026-06-27-workbench-management-design.md  2026-06-27-workbench-sidebar-and-naming-design.md  2026-06-28-agui-workspace-design.md  2026-06-29-engineering-memory-hub-design.md  2026-06-30-work-item-state-machine-design.md  2026-07-01-workbench-ui-prototype-design.md  2026-07-02-frontend-i18n-foundation-design.md  2026-07-02-loop-engineering-model-design.md  2026-07-09-role-based-homepage-design.md
internal/pages/templates/: app.html  confirm_result.html  oauth_callback.html  status.html
migrations/postgres/: 002_create_workbenches.sql  003_add_workbench_name.sql  003_create_agent_sessions.sql  004_create_agent_runs_messages_events.sql  20260627000001_create_users.sql  20260627000002_create_workbenches.sql  20260627000003_create_agent_sessions.sql  20260627000004_create_agent_runs_messages_events.sql  20260627000005_create_engineering_memory.sql  20260627000006_create_pending_actions.sql
migrations/sqlite/: 001_create_users.sql  002_create_workbenches.sql  003_create_agent_sessions.sql  004_create_agent_runs_messages_events.sql  20260627000001_create_users.sql  20260627000002_create_workbenches.sql  20260627000003_create_agent_sessions.sql  20260627000004_create_agent_runs_messages_events.sql  20260627000005_create_engineering_memory.sql  20260627000006_create_pending_actions.sql
prompts/: agent_system.j2
runtime/opencode/: Dockerfile
src/: config.rs  error.rs  lib.rs  main.rs
src/actions/: models.rs  store.rs
src/agent/: events.rs  gitlab_tools.rs  issue_preparation.rs  mod.rs  models.rs  openai.rs  orchestrator.rs  prompt.rs  runs.rs  sessions.rs  worker.rs
src/config/: raw.rs  sources.rs
src/db/: mod.rs
src/gitlab/: client.rs  codec.rs  commands.rs  issues.rs  mod.rs  projects.rs  repository.rs  webhook.rs  wiki.rs
src/http/: routes.rs  server.rs
src/http/handlers/: agent_handler.rs  auth_handler.rs  confirm_handler.rs  issues_handler.rs  memory_handler.rs  mod.rs  oauth_handler.rs  oidc_handler.rs  spa_handler.rs  status_handler.rs  webhook_handler.rs  workbench_handler.rs
src/issue_state/: models.rs  service.rs
src/memory/: models.rs  store.rs
src/oauth/: mod.rs
src/oidc/: mod.rs
src/session/: mod.rs
src/workflow/: issue_state_machine.rs  mod.rs  mr_state_machine.rs  permissions.rs  release_state_machine.rs  types.rs
tests/: agent_prompt.rs  agent_run.rs  agent_schema.rs  agent_sessions.rs  agent_tools.rs  agui_axum.rs  agui_protocol.rs  agui_runtime.rs  auth_me.rs  config_loading.rs  confirm_handler.rs  db_migrations.rs  db_setup.rs  engineering_memory_handler.rs  gitlab_commands.rs  gitlab_issue_creation.rs  gitlab_issue_update.rs  issue_state_handler.rs  issue_state_machine.rs  issue_state_memory_scope.rs  issue_state_route_cleanup.rs  mr_state_machine.rs  oauth_handler.rs  oidc_config.rs  oidc_handler.rs  pending_actions_handler.rs  release_state_machine.rs  session_cookie.rs  spa_handler.rs  status_handler.rs  webhook_handler.rs  workbench_naming.rs  workflow_permissions.rs
tests/common/: auth_token.rs  mod.rs  seed_agent_session.rs  seed_issue_context_memory.rs  seed_issue_state_memory.rs  seed_user_and_workbench.rs  test_app.rs  test_app_with_pool.rs  test_pool.rs
web/: .env.mock  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/src/: App.vue  app-mode.ts  main.ts
web/src/api/: agent.api.ts  auth.api.ts  helpers.ts  issues.api.ts  projects.api.ts  workbench.api.ts
web/src/composables/: useA2UIBridge.ts  useAgentRun.ts
web/src/i18n/: index.ts  locale.ts
web/src/mock/: prototype.data.ts  prototype.types.ts  prototype.ui-profile.ts
web/src/mocks/: handlers.ts
web/src/router/: index.ts
web/src/stores/: agent.store.ts  prototype.store.ts  session.store.ts  session.ts
(+105 files in other folders)
