[workspace]
members = [
    ".",
    "crates/agui-protocol",
    "crates/agui-runtime",
    "crates/agui-axum",
]
resolver = "2"

[workspace.dependencies]
async-openai = { version = "0.41.1", features = ["byot", "chat-completion"] }
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
futures = "0.3"
hmac = "0.12"
jsonwebtoken = "9"
minijinja = "2.2"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream = "0.1"
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[package]
name = "issueflow"
version = "0.1.0"
edition = "2024"

[dependencies]
agui-axum = { path = "crates/agui-axum" }
agui-protocol = { path = "crates/agui-protocol" }
agui-runtime = { path = "crates/agui-runtime" }
async-openai.workspace = true
axum.workspace = true
base64.workspace = true
dotenvy.workspace = true
futures.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
minijinja.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
agui-axum = { path = "crates/agui-axum" }
agui-protocol = { path = "crates/agui-protocol" }
agui-runtime = { path = "crates/agui-runtime" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
