[workspace]
members = [
    ".",
    "crates/agui-protocol",
    "crates/agui-runtime",
    "crates/agui-axum",
]
resolver = "2"

[workspace.dependencies]
async-openai = { version = "0.41.1", features = ["byot", "chat-completion"] }
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
futures = "0.3"
hmac = "0.12"
jsonwebtoken = "9"
minijinja = "2.2"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream = "0.1"
toml = "0.8"
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
dead_code = "forbid"
unused_variables = "forbid"
warnings = "deny"

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[package]
name = "issueflow"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "issueflow"
path = "src/main.rs"
test = false

[dependencies]
agui-axum = { path = "crates/agui-axum" }
agui-protocol = { path = "crates/agui-protocol" }
agui-runtime = { path = "crates/agui-runtime" }
async-openai.workspace = true
axum.workspace = true
base64.workspace = true
dotenvy.workspace = true
futures.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
minijinja.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
agui-axum = { path = "crates/agui-axum" }
agui-protocol = { path = "crates/agui-protocol" }
agui-runtime = { path = "crates/agui-runtime" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
