[package]
name = "agui-runtime"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
agui-protocol = { path = "../agui-protocol" }
async-openai.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
